--- a/force-app/main/default/aura/pantalla/pantalla.css
+++ b/force-app/main/default/aura/pantalla/pantalla.css
@@ -1,2 +1,32 @@
 .THIS {
 }
+/* Headers */
+.THIS.h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.THIS.h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #555;
+}
+
+/* Paragraphs */
+.THIS.p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  color: #777;
+}
+
+/* Links */
+.THIS.a {
+  color: #336699;
+  text-decoration: none;
+}
+
+.THIS.a:hover {
+  color: #225588;
+  text-decoration: underline;
+}
