--- a/force-app/main/default/aura/matatopos/matatopos.css
+++ b/force-app/main/default/aura/matatopos/matatopos.css
@@ -2,14 +2,36 @@
 }
 
 .THIS .rojo{
-    background-color: lightcoral;
+    background-color: rgb(250, 80, 80);
+    margin: 5px;
     width: 100px;
     height: 100px; 
     border: 2px solid black;
+    transition-duration: 0.4s;
 }
+
+.THIS .rojo:hover{
+    background-color: red;
+    margin: 0px;
+    width: 110px;
+    height: 110px; 
+    cursor: pointer;
+}
+
+
 .THIS .azul{
     background-color: lightblue;
+    margin: 5px;
     width: 100px;
     height: 100px; 
     border: 2px solid black;
+    transition-duration: 0.4s;
+}
+
+.THIS .azul:hover{
+    background-color: cyan;
+    margin: 0px;
+    width: 110px;
+    height: 110px; 
+    cursor: pointer;
 }
