--- a/force-app/main/default/aura/topos/topos.css
+++ b/force-app/main/default/aura/topos/topos.css
@@ -1,2 +1,16 @@
-.THIS {
-}
+.THIS.topo {
+    width: 50px;
+    height: 50px;
+    background-color: #336699;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .THIS.topo:hover {
+    background-color: #225588;
+    transform: translate(-50%, -50%) scale(1.2);
+  }
