--- a/force-app/main/default/aura/matatopos/matatopos.css
+++ b/force-app/main/default/aura/matatopos/matatopos.css
@@ -1,37 +1,40 @@
-.THIS {
-}
+
 
 .THIS .rojo{
-    background-color: rgb(250, 80, 80);
+    background-color: rgb(0, 165, 8);
     margin: 5px;
     width: 100px;
     height: 100px; 
     border: 2px solid black;
+    border-radius: 50px;
     transition-duration: 0.4s;
 }
 
 .THIS .rojo:hover{
-    background-color: red;
+    background-color: rgb(255, 251, 0);
     margin: 0px;
     width: 110px;
     height: 110px; 
+    border-radius: 50px;
     cursor: pointer;
 }
 
 
 .THIS .azul{
-    background-color: lightblue;
+    background-color: rgb(136, 0, 255);
     margin: 5px;
     width: 100px;
     height: 100px; 
     border: 2px solid black;
+    border-radius: 50px;
     transition-duration: 0.4s;
 }
 
 .THIS .azul:hover{
-    background-color: cyan;
+    background-color: rgb(128, 0, 255);
     margin: 0px;
     width: 110px;
     height: 110px; 
+    border-radius: 50px;
     cursor: pointer;
 }
